--- a/index.html
+++ b/index.html
@@ -203,17 +203,17 @@
 					</div>
 
 					<div class="row">
-						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s">
-							<div class="f-box f-icon-left f-icon-circle f-border">
-								<i class="fa fa-laptop id-color"></i>
-								<div class="fb-text">
-									<h4>China University of Petroleum(East China)</h4>
-									<p>Years:2019-2021</p>
+						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s"> -->
+							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
+								<!-- <i class="fa fa-laptop id-color"></i> -->
+								<!-- <div class="fb-text"> -->
+									<!-- <h4>China University of Petroleum(East China)</h4> -->
+									<!-- <p>Years:2019-2021</p> -->
 									
 									
-								</div>
-							</div>
-						</div>
+								<!-- </div> -->
+							<!-- </div> -->
+						<!-- </div> -->
 
 						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".25s">
 							<div class="f-box f-icon-left f-icon-circle f-border">
