--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
 								</div>
 							</div>
 						</div>
+						
+						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s">
+							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
+								<i class="fa fa-object-group id-color"></i>
+								<div class="fb-text">
+									<h4></h4>
+									<p></p>
+								</div>
+							</div>
+						</div>
 
 						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".5s">
 							<div class="f-box f-icon-left f-icon-circle f-border">
