--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						</div>
 					</div>
 
-					<div class="row">
+					<div class="row justify-content-center">
 						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s"> -->
 							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
 								<!-- <i class="fa fa-laptop id-color"></i> -->
