--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
 							<div id="gallery" class="gallery full-gallery de-gallery pf_full_width pf_3_cols grid sequence">
 								<!-- gallery item -->
-								<div class="item illustration gallery-item pf-click" data-value="https://www.4399.com/.html">
+								<!-- <div class="item illustration gallery-item pf-click" data-value="https://www.4399.com/.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
@@ -366,7 +366,17 @@
 										</span>
 										<img src="sen/Arduino小车.gif" alt="" />
 									</div>
-								</div>
+								</div> -->
+								<a href="https://www.google.com" class="item illustration gallery-item pf-click" data-value="project-details-slider.html">
+									<div class="picframe wow">
+									  <span class="overlay">
+										<span class="pf_text">
+										  <span class="project-name">Details</span>
+										</span>
+									  </span>
+									  <img src="sen/Arduino小车.gif" alt="" />
+									</div>
+								  </a>
 								<!-- close gallery item 第一幅大图片 -->       
 
 								<!-- gallery item -->
