--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item mobile gallery-item pf-click" data-value="project-details-image-big.html">
+								<a href="https://youtube.com/shorts/M2j2N3eq59I?feature=share" class="item mobile gallery-item pf-click" data-value="project-details-image-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
@@ -454,7 +454,7 @@
 										</span>
 										<img src="sen/plc1.gif" alt="" />
 									</div>
-								</div>
+								</a>
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
