--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item  mobile  gallery-item pf-click" data-value="project-details-slider-big.html">
+								<a href="https://youtu.be/tc0ahcFHdro" class="item  mobile  gallery-item pf-click" data-value="project-details-slider-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
@@ -467,7 +467,7 @@
 										</span>
 										<img src="sen/plc2.gif" alt="" />
 									</div>
-								</div>
+								</a>
 								<!-- close gallery item -->
 
 								<div class="item website gallery-item pf-click" data-value="project-details-slider-big.html">
