--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<li></li>
 									<li><a href="#section-portfolio">Portfolio</a></li>
 									<li></li>
-									<li><a href="#section-blog">My projects</a></li>
+									<li><a href="#section-blog">My Projects</a></li>
 									<li></li>
 									<li><a href="#section-contact">Contact</a></li>
 									<li></li>
@@ -97,7 +97,7 @@
 		<div class="no-bottom no-top" id="content">
 			<div id="top"></div>
 
-			<section id="section-hero" class="vertical-center custom-1" data-bgimage="url(static/images/background/1.jpg) top" data-stellar-background-ratio=".5">
+			<section id="section-hero" class="vertical-center custom-1" data-bgimage="url(static/images/background/2.jpg) top" data-stellar-background-ratio=".5">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-5 offset-lg-7">
@@ -351,7 +351,7 @@
 								<li><a href="#" data-filter=".illustration">Elisa-3 robot</a></li>
 								<li><a href="#" data-filter=".mobile">FESTO MPS500</a></li>
 								<li><a href="#" data-filter=".photography">Quanser Qbot3</a></li>
-								<li><a href="#" data-filter=".website">Personal Project</a></li>
+								<li><a href="#" data-filter=".website">Individual Project</a></li>
 								<li><a href="#" data-filter=".five-bar">five-bar planar parallel robot</a></li>
 							</ul>
 
@@ -380,29 +380,29 @@
 								<!-- close gallery item 第一幅大图片 -->       
 
 								<!-- gallery item -->
-								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
+								<a href="https://youtu.be/NtZrMPS4SMU" class="item photography gallery-item pf-click" data-value="project-details-slider.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Details</span>
+											  <span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/A1.gif" alt="" />
 									</div>
-								</div>
+								  </a>
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
+								<a href="https://youtu.be/CT-hGZUrNzY" class="item photography gallery-item pf-click" data-value="project-details-slider.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Details</span>
-											</span>
+											  <span class="project-name">Details</span>
+										    </span>
 										</span>
 										<img src="sen/A2.gif" alt="" />
 									</div>
-								</div>
+								  </a>
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
@@ -470,7 +470,7 @@
 								</a>
 								<!-- close gallery item -->
 
-								<div class="item website gallery-item pf-click" data-value="project-details-slider-big.html">
+								<a href="https://youtu.be/KzEndkKQwWE" class="item website gallery-item pf-click" data-value="project-details-slider-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
@@ -479,7 +479,7 @@
 										</span>
 										<img src="sen/hand.gif" alt="" />
 									</div>
-								</div>
+								</a>
 								<!-- close gallery item -->
 
 								<!-- <div class="item website gallery-item pf-click" data-value="project-details-slider-big.html"> -->
@@ -494,7 +494,7 @@
 								<!-- </div> -->
 								<!-- close gallery item -->
 
-								<div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
+								<a href="https://youtu.be/n-KMIBmOmgk" class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
@@ -503,7 +503,7 @@
 										</span>
 										<img src="sen/5bar1.gif" alt="" />
 									</div>
-								</div>
+								</a>
 								<!-- close gallery item -->
 
 								<!-- <div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html"> -->
@@ -518,16 +518,16 @@
 								<!-- </div> -->
 								<!-- close gallery item -->
 
-								<div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
+								<a href="https://youtu.be/RuSgdKbbRSg" class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Details</span>
+											  <span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/5bar2.gif" alt="" />
 									</div>
-								</div>
+								</a>
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
