--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 									<p>Years:2019-2023 <p>
 									   <p>Degree: BEng Mechanical Engineering with Robotics <p>
 									   <p>Class: First Class<p>
-									   <p>Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize<p>
+									   <p>Achievements: Department of Engineering and Design Industrial Design Seminar 2023 first prize<p>
 									                 The Institution Best Project from the Institution of Mechanical Engineers
 									</p>
 								</div>
