--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 									<div class="picframe wow">
 									  <span class="overlay">
 										<span class="pf_text">
-										  <span class="project-name">Details</span>
+										  <span class="project-name">View</span>
 										</span>
 									  </span>
 									  <img src="sen/Arduino小车.gif" alt="" />
@@ -384,7 +384,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-											  <span class="project-name">Details</span>
+											  <span class="project-name">View</span>
 											</span>
 										</span>
 										<img src="sen/A1.gif" alt="" />
@@ -397,7 +397,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-											  <span class="project-name">Details</span>
+											  <span class="project-name">View</span>
 										    </span>
 										</span>
 										<img src="sen/A2.gif" alt="" />
@@ -449,7 +449,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Details</span>
+												<span class="project-name">View</span>
 											</span>
 										</span>
 										<img src="sen/plc1.gif" alt="" />
@@ -462,7 +462,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Details</span>
+												<span class="project-name">View</span>
 											</span>
 										</span>
 										<img src="sen/plc2.gif" alt="" />
@@ -474,7 +474,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Details</span>
+												<span class="project-name">View</span>
 											</span>
 										</span>
 										<img src="sen/hand.gif" alt="" />
@@ -498,7 +498,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Details</span>
+												<span class="project-name">View</span>
 											</span>
 										</span>
 										<img src="sen/5bar1.gif" alt="" />
@@ -522,7 +522,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-											  <span class="project-name">Details</span>
+											  <span class="project-name">View</span>
 											</span>
 										</span>
 										<img src="sen/5bar2.gif" alt="" />
