--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
 														<span class="project-name">View</span>
 													</span>
 												</span>
-												<img src="sen/leorover.jpg" alt="A-Star Algorithm" />
+												<img src="sen/leorover.jpg" alt="leorover" />
 											</div>
 										</a>
 									</div>
