reflush when loading error

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 
 		<!-- header begin -->
 		<header class="header-light transparent scroll-light">
+
+
+
+
+
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -101,6 +106,7 @@
 		<div class="no-bottom no-top" id="content">
 			<div id="top"></div>
 
+			<button onclick="window.history.go(-1); return false;" class="btn btn-custom color-2">Go Back</button>
 			<section id="section-hero" class="vertical-center custom-1" data-bgimage="url(static/images/background/3.jpg) top" data-stellar-background-ratio=".5">
 				<div class="container">
 					<div class="row">
