--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="no-bottom no-top" id="content">
 			<div id="top"></div>
 
-			<button onclick="window.history.go(-1); return false;" class="btn btn-custom color-2">Go Back</button>
+			
 			<section id="section-hero" class="vertical-center custom-1" data-bgimage="url(static/images/background/3.jpg) top" data-stellar-background-ratio=".5">
 				<div class="container">
 					<div class="row">
@@ -1257,6 +1257,13 @@
 	<script src="static/js/jquery.countto.js"></script>
 	<script src="static/js/jquery.countdown.js"></script>
 	<script src="static/js/designesia.js"></script>
+	<script>
+		document.addEventListener("visibilitychange", function() {
+			if (document.visibilityState === 'visible') {
+				window.location.reload(); // 刷新页面
+			}
+		});
+		</script>
 	<script>
 	$(document).ready(function() {
 		
